--- a/.ci/azure/linux_arm64.yml
+++ b/.ci/azure/linux_arm64.yml
@@ -31,6 +31,14 @@ pr:
     - 'tools/*'
     - 'tests/layer_tests/*'
 
+resources:
+  repositories:
+  - repository: conan-center-index
+    type: github
+    endpoint: openvinotoolkit
+    name: uilianries/conan-center-index
+    ref: package/compute-library
+
 variables:
   - group: github
 
@@ -54,6 +62,7 @@ jobs:
     WORK_DIR: $(Pipeline.Workspace)/_w
     SHARE_DIR: /mount/cinfsshare/onnxtestdata
     TMP_DIR: /mnt/tmp
+    CONAN_CENTER_INDEX_REPO_DIR: $(OPENVINO_REPO_DIR)/../conan-center-index
     OPENVINO_CCACHE_DIR: $(SHARE_DIR)/ccache/master/linux_arm64
     LD_LIBRARY_PATH: $(Agent.ToolsDirectory)/Python/$(OV_PYTHON_VERSION)/x64/lib
     OV_PYTHON_VERSION_MAJOR_MINOR: 3.11
@@ -111,6 +120,11 @@ jobs:
     clean: 'true'
     path: openvino
 
+  - checkout: conan-center-index
+    clean: 'true'
+    submodules: 'true'
+    path: conan-center-index
+
   - script: |
       set -e
       python3 -m pip install --upgrade pip
@@ -148,9 +162,12 @@ jobs:
 
   - script: |
       set -e
-      git submodule update --init -- $(OPENVINO_REPO_DIR)/src/plugins
+      git submodule update --init -- $(OPENVINO_REPO_DIR)/src/plugins/intel_gpu/thirdparty
+      git submodule update --init -- $(OPENVINO_REPO_DIR)/src/plugins/intel_cpu/thirdparty/mlas
+      git submodule update --init -- $(OPENVINO_REPO_DIR)/src/plugins/intel_cpu/thirdparty/onednn
       git submodule update --init -- $(OPENVINO_REPO_DIR)/thirdparty/gtest
       git submodule update --init -- $(OPENVINO_REPO_DIR)/thirdparty/open_model_zoo
+    workingDirectory: $(OPENVINO_REPO_DIR)
     displayName: 'Init submodules for non Conan dependencies'
 
   - script: |
@@ -165,6 +182,8 @@ jobs:
       echo "[buildenv]" >> $(BUILD_OPENVINO)/linux_arm64
       echo "CC=aarch64-linux-gnu-gcc-10" >> $(BUILD_OPENVINO)/linux_arm64
       echo "CXX=aarch64-linux-gnu-g++-10" >> $(BUILD_OPENVINO)/linux_arm64
+      # install ARM Compute explicitly
+      conan create $(CONAN_CENTER_INDEX_REPO_DIR)/recipes/compute_library/all --version 23.08 -b missing
       # install OpenVINO dependencies
       conan install $(OPENVINO_REPO_DIR)/conanfile.txt \
         -pr:h $(BUILD_OPENVINO)/linux_arm64 \
