--- a/.gitmodules
+++ b/.gitmodules
@@ -75,3 +75,6 @@
 [submodule "src/plugins/intel_cpu/thirdparty/mlas"]
 	path = src/plugins/intel_cpu/thirdparty/mlas
 	url = https://github.com/openvinotoolkit/mlas.git
+[submodule "src/plugins/intel_cpu/thirdparty/ggml"]
+	path = src/plugins/intel_cpu/thirdparty/ggml
+	url = https://github.com/ggerganov/ggml.git
