Print PYTHON_MODULE_EXTENSION

--- a/src/bindings/python/CMakeLists.txt
+++ b/src/bindings/python/CMakeLists.txt
@@ -56,7 +56,12 @@ function(ov_check_python_build_conditions)
             message(STATUS "Python3 PyPy version: ${Python3_PyPy_VERSION}")
         endif()
         message(STATUS "Python3 interpreter ID: ${Python3_INTERPRETER_ID}")
-        message(STATUS "Python3 SOABI: ${Python3_SOABI}")
+        if(Python3_SOABI)
+            message(STATUS "Python3 SOABI: ${Python3_SOABI}")
+        endif()
+        if(PYTHON_MODULE_EXTENSION)
+            message(STATUS "PYTHON_MODULE_EXTENSION: ${PYTHON_MODULE_EXTENSION}")
+        endif()
         message(STATUS "Python3 include dirs: ${Python3_INCLUDE_DIRS}")
         message(STATUS "Python3 libraries: ${Python3_LIBRARIES}")
     else()
@@ -90,7 +95,7 @@ function(ov_check_python_build_conditions)
         set(python_debug OFF)
     endif()
 
-    if(Python3_Development_FOUND AND ie_build_python_req_FOUND AND NOT python_debug)
+    if(Python3_Development.Module_FOUND AND ie_build_python_req_FOUND AND NOT python_debug)
         set(ENABLE_PYTHON_DEFAULT ON PARENT_SCOPE)
     else()
         set(ENABLE_PYTHON_DEFAULT OFF PARENT_SCOPE)
