--- a/.ci/openvino-onnx/Dockerfile
+++ b/.ci/openvino-onnx/Dockerfile
@@ -65,6 +65,7 @@ RUN cmake .. \
     -DENABLE_OV_PYTORCH_FRONTEND=ON \
     -DENABLE_OV_TF_FRONTEND=OFF \
     -DENABLE_OPENVINO_DEBUG=OFF \
+    -DENABLE_PYTHON=ON \
     -DCMAKE_INSTALL_PREFIX=/openvino/dist
 RUN ninja install
 
