--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -354,8 +354,8 @@ jobs:
             -d=${{ env.TEST_DEVICE }} \
             -t=${{ matrix.TEST_TYPE }} \
             -w=${{ env.CONFORMANCE_ARTIFACTS_DIR }} \
-            -f=${{ env.CONFORMANCE_TOOLS_DIR }}/expected_failures_${{ env.TEST_DEVICE }}.csv \
-            ${{ github.ref_name == 'master' && '-u' || '' }}
+            -f=${{ env.CONFORMANCE_TOOLS_DIR }}/expected_failures_${{ env.TEST_DEVICE }}.csv -u
+#            ${{ github.ref_name == 'master' && '-u' || '' }}
 
       # Required due to: https://github.com/actions/cache/tree/main/restore#ensuring-proper-restores-and-save-happen-across-the-actions
       - name: Rename Expected Failures List
