--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -696,26 +696,18 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install -r ${{ github.workspace }}\install\tests\functional_test_utils\requirements.txt
 
-      - name: Restore tests execution time
-        uses: actions/cache/restore@v3
+      - name: Cache Tests Execution Time
+        id: tests-functional-cpu-cache
+        uses: actions/cache@v3
         with:
           path: ${{ env.PARALLEL_TEST_CACHE }}
-          key: ${{ runner.os }}-tests-functional-cpu-stamp-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-tests-functional-cpu-stamp
+          key: ${{ runner.os }}-tests-functional-cpu-cache
 
       - name: Intel CPU plugin func tests (parallel)
         shell: cmd
         run: |
           call "${{ env.INSTALL_DIR }}\\setupvars.bat" && python3 ${{ env.PARALLEL_TEST_SCRIPT }} -e ${{ env.INSTALL_TEST_DIR }}\ov_cpu_func_tests.exe -c ${{ env.PARALLEL_TEST_CACHE }} -w ${{ env.INSTALL_TEST_DIR }} -s suite -- --gtest_filter=*smoke*"
         timeout-minutes: 45
-
-      - name: Save tests execution time
-        uses: actions/cache/save@v3
-        if: github.ref_name == 'master'
-        with:
-          path: ${{ env.PARALLEL_TEST_CACHE }}
-          key: ${{ runner.os }}-tests-functional-cpu-stamp-${{ github.sha }}
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
